# rotms-slicer

./: .gitignore  CMakeLists.txt  README.md
MedImgPlan/: MedImgPlan.py
MedImgPlan/MedImgPlanLib/: LogicMedImg.py  UtilCalculations.py  UtilConnectionsWtNnBlcRcv.py  UtilMedImgConnections.py  WidgetMedImg.py  WidgetMedImgBase.py
MedImgPlan/Resources/Configs/: CommandsConfig.json  Config.json
MedImgPlan/Resources/Configs/data/AK/: A.mrk.json  B.mrk.json  C.mrk.json  D.mrk.json  E.mrk.json
MedImgPlan/Resources/Configs/data/JZ/: A.mrk.json  E.mrk.json  cent.mrk.json  r.mrk.json
MedImgPlan/Resources/Configs/data/YL/: A.mrk.json  B.mrk.json  C.mrk.json  D.mrk.json  E.mrk.json  E9.yaml  F.mrk.json  G.mrk.json  H.mrk.json  I.mrk.json  J.mrk.json  K.mrk.json  cent.mrk.json
MedImgPlan/Resources/Configs/data/YY/: A.mrk.json  B.mrk.json  C.mrk.json  C_rot2.mrk.json  C_rot3.mrk.json  D.mrk.json  E.mrk.json  c_m.mrk.json  grids_centers_YY.mrk.json  grids_centers_YY_03132023.mrk.json  r.mrk.json
MedImgPlan/Resources/Configs/data/ZS/: C.mrk.json  Transform_ManThreshT4.h5  Transform_Man_toolpose2.h5  grid_centers_ZC.mrk.json  (+1 more)
MedImgPlan/Resources/UI/: MedImgPlan.ui
RobotControl/Resources/Configs/: CommandsConfig.json  Config.json
RobotControl/Resources/UI/: RobotControl.ui
Simulation/: CMakeLists.txt  Loader.py  Mapper.py  Simulation.py
TargetVisualization/: TargetVisualization.py
TargetVisualization/Resources/Configs/: CommandsConfig.json  Config.json
TargetVisualization/Resources/UI/: TargetVisualization.ui
doc/: Simulation.md  rotms-slicer--doxygen-config
(+17 files in other folders)
